Fixed bugs when updating or deleting a category